# AI-Powered-Health-Intelligence-System

./: .gitignore  README.md  docker-compose.yml  generate_mock_data.py
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/ml/data/knowledge_base/: .gitkeep
backend/ml/models/: .gitkeep
backend/ml/scripts/: __init__.py  build_vector_index.py
backend/ml/training/: disease_trainer.py  heart_trainer.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  deps.py
backend/src/api/v1/: __init__.py  router.py
backend/src/api/v1/endpoints/: auth.py  chat.py  dashboard.py  disease.py  drug.py  heart.py
backend/src/core/: __init__.py  config.py  logging.py  security.py
backend/src/db/: __init__.py  base.py  session.py
backend/src/models/: __init__.py  chat.py  prediction.py  user.py
backend/src/schemas/: __init__.py  chat.py  disease.py  drug.py  heart.py  user.py
backend/src/services/: __init__.py  auth_service.py  chat_service.py  disease_service.py  drug_service.py  heart_service.py
backend/src/services/rag/: __init__.py  gemini_medical_rag.py  llm_client.py  rag_pipeline.py  vector_store.py
backend/tests/: conftest.py  test_auth.py
frontend/: Dockerfile
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/chat/: page.tsx
frontend/src/app/dashboard/drugs/: page.tsx
frontend/src/app/dashboard/heart/: page.tsx
frontend/src/app/dashboard/history/: page.tsx
frontend/src/app/dashboard/predict/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/lib/: api.ts  auth.tsx
frontend/src/types/: index.ts
